# FrameWork

./: .gitignore  CMakeLists.txt  README.md
Base/: CMakeLists.txt
Base/inc/: Export_Dll.h  FileHelper.h  Item.h  Notify.h
Base/src/: FileHelper.cpp  Notify.cpp
CMake/: ConfigCXX.cmake  ConfigDll.cmake  ConfigQt.cmake
UI/: CMakeLists.txt
UI/inc/: BaseWidget.h  ContentW.h  FramelessWindow.hpp  MainWindow.h  TitleBar.h
UI/res/: Control.qrc
UI/res/qss/: ContentW.qss  TitileBar.qss
UI/src/: BaseWidget.cpp  ContentW.cpp  MainWindow.cpp  TitleBar.cpp
